# theft_detector

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  requirements.txt
config/: appliances.yaml
data/ota_city/: 20080102_TMN0016_1s.csv  20080102_TMN0029_1s.csv  20080102_TMN0101_1s.csv  20080102_TMN0115_1s.csv  20080102_TMN0149_1s.csv
src/: check.py  data.py  data_generator.py  detector.py  graph_generator.py  test.py  test_generator.py
src/trader/: blockchain.py  energy_trading.py  simulator.py
