[project]
name = "my_sim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kaichiyoshino", email = "105576362+kaichiyoshino@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "polars>=0.20.31",
    "matplotlib>=3.9.2",
    "scipy>=1.13.1",
    "pandas>=2.2.2",
    "ruff>=0.4.9",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/theft_detection_simulator"]
